data/Java/13-bad-operand-types/6/[M]Error.txt
https://stackoverflow.com/questions/32385777/bad-operand-types-for-binary-operator
TransitionWork.java:28: error: bad operand types for binary operator '<'
    if (age < 17) {
            ^